<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/novo_paciente"
        android:textAlignment="center"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/nome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/nomeEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/nome_editText"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeTextView" />

    <TextView
        android:id="@+id/idadeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/idade"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nomeEditTextView" />

    <TextView
        android:id="@+id/idadeEditTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/idade_editText"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idadeTextView" />

    <CheckBox
        android:id="@+id/litiase_checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/litiase_biliar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idadeEditTextView" />

    <TextView
        android:id="@+id/leucocitosTextView"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/leucocitos"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/litiase_checkBox" />

    <TextView
        android:id="@+id/leucocitosEditTextView"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/leucocitos_edittext"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintEnd_toStartOf="@+id/celTextView"
        app:layout_constraintStart_toEndOf="@+id/leucocitosTextView"
        app:layout_constraintTop_toBottomOf="@+id/litiase_checkBox" />

    <TextView
        android:id="@+id/celTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="8dp"
        android:text="@string/c_l_mm3"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/litiase_checkBox" />

    <TextView
        android:id="@+id/glicemiaTextView"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/glicemia"
        android:textAlignment="textStart"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leucocitosEditTextView" />

    <TextView
        android:id="@+id/glicemiaEditText"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/glicemia_edittext"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/glicemiaTextView"
        app:layout_constraintTop_toBottomOf="@+id/leucocitosEditTextView" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mmol_l"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/glicemiaEditText"
        app:layout_constraintTop_toBottomOf="@+id/leucocitosEditTextView" />

    <TextView
        android:id="@+id/astTextView"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/ast_tgo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/glicemiaEditText" />

    <TextView
        android:id="@+id/astTextEdit"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ast_edittext"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/astTextView"
        app:layout_constraintTop_toBottomOf="@+id/glicemiaEditText" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ui_l"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/astTextEdit"
        app:layout_constraintTop_toBottomOf="@+id/glicemiaEditText" />

    <TextView
        android:id="@+id/ldhTextView"
        android:layout_width="80dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:text="@string/ldh"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/astTextEdit" />

    <TextView
        android:id="@+id/ldhTextEdit"
        android:layout_width="240dp"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ldh_edittext"
        android:textAlignment="center"
        android:textSize="14sp"
        android:visibility="invisible"
        app:layout_constraintStart_toEndOf="@+id/ldhTextView"
        app:layout_constraintTop_toBottomOf="@+id/astTextEdit" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/ui_l"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/ldhTextEdit"
        app:layout_constraintTop_toBottomOf="@+id/astTextEdit" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/calcular"
        android:onClick="calculateRansomCriteria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ldhTextEdit" />

</androidx.constraintlayout.widget.ConstraintLayout>